# better-bites

./: README.md  better-bites-app-plan.md  package-lock.json
better-bites-web/: .env.local  .gitignore  README.md  angular.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
better-bites-web/src/: index.html  styles.css
better-bites-web/src/app/: app.config.ts  app.html  app.routes.ts  app.spec.ts
better-bites-web/src/app/auth/: auth.routes.ts
better-bites-web/src/app/core/guards/: admin.guard.ts  auth.guard.ts  guest.guard.ts
better-bites-web/src/app/core/interceptors/: auth-token.interceptor.ts
better-bites-web/src/app/core/router/: route-reuse.strategy.ts
better-bites-web/src/app/onboarding/: onboarding.routes.ts
better-bites-web/src/environments/: environment.development.ts  environment.ts
services/food-cache/: .env.example  README.md  pyproject.toml
services/food-cache/app/: __main__.py  config.py  crud.py  database.py  dependencies.py  main.py  models.py  openfoodfacts.py  schemas.py
supabase/functions/admin-delete-user/: index.ts
supabase/functions/admin-report/: index.ts
supabase/functions/admin-users/: index.ts
supabase/sql/: 001_core_schema.sql  002_seed_content.sql  003_add_logged_at_to_activity_entries.sql  004_reset_seed_data.sql  005_fix_daily_log_triggers.sql  006_add_log_date_to_water_entries.sql  007_reset_daily_log_triggers.sql  008_add_role_to_profiles.sql  009_add_food_ref_id_to_meal_entries.sql  010_report_shares_and_public_report.sql  011_drop_streaks.sql
(+56 files in other folders)
