[project]
name = "food-cache-service"
version = "0.1.0"
description = "Caching proxy for OpenFoodFacts used by Better Bites"
authors = [{ name = "Better Bites" }]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.5",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.27.2",
  "sqlalchemy>=2.0.36",
  "aiosqlite>=0.20.0",
  "pydantic-settings>=2.6.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.4"
]

[tool.uvicorn]
app = "app.main:app"
host = "0.0.0.0"
port = 5100
reload = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
